# plutarch-FFI-tests

./: Makefile  README.md  cabal.project  flake.nix  hie.yaml  plutarch-ffi-tests.cabal
.github/workflows/: integrate.yaml
src/: Test.PlutarchFFI.hs
test/: Spec.hs
